--- a/index.html
+++ b/index.html
@@ -5,27 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Hello!</title>
+    <title>FLW 01.3 Disappearing Ghost Project</title>
     
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="/style.css">
     
     <!-- import the webpage's javascript file -->
-    <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
-
     <script src="/script.js" defer></script>
-  </head>  
+  </head>
+  
   <body>
    
-      <h1>Do you know my name?</h1>
+      <h1 class="header">Do you know my name?</h1>
         <div class="main">
-            <img class="ghost-image" src="https://ih1.redbubble.net/image.153656513.6605/flat,800x800,075,f.jpg">
+            <img class="ghost-image" src="images/pngfind.com-snapchat-logo-png-transparent-522479.png">
             <div class="buttons">
                 <button class="button hide-button">Hide Me</button>
                 <button class="button show-button">Show Me</button>
                 <button class="button update-img-button">Update Image</button>
                 <button class="button message-button">Send Message</button>
                 <button class=" button name-button">Name Me</button>
+              <button class=" button back1-button">background1</button>
+              <button class=" button back2-button">background2</button>
             </div>
             <div>
                 <input class="input" placeholder="type here">
